--- a/src/main/resources/configserver.properties
+++ b/src/main/resources/configserver.properties
@@ -1,3 +1,10 @@
+# ===============================
+# = SERVER CONFIGURATION
+# ===============================
 server.port=8887
-spring.appliction.name=config-server
+spring.application.name=configserver
 spring.cloud.config.server.git.uri=https://github.com/Manilab2309/ConfigServerSSL.git
+
+# Si deseas albergar tu repositorio de ficheros de configuración de forma nativa en tu sistema
+# spring.profiles.active=native
+# spring.cloud.config.server.native:searchLocations=file://${user.dir}/cloud-configuration-repository
