--- a/src/main/resources/configserver.properties
+++ b/src/main/resources/configserver.properties
@@ -1,9 +1,12 @@
+# Component Info
+info.component = SpringConfig-Server
+
 # ===============================
 # = SERVER CONFIGURATION
 # ===============================
-server.port=8887
-spring.application.name=configserver
-spring.cloud.config.server.git.uri=https://github.com/Manilab2309/ConfigServerSSL.git
+server.port = 8887
+pring.application.name = configserver
+spring.cloud.config.server.git.uri = https://github.com/Manilab2309/ConfigRepoFiles.git
 
 # Si deseas albergar tu repositorio de ficheros de configuración de forma nativa en tu sistema
 # spring.profiles.active=native
