Configured for HTTPs

--- a/src/main/resources/configserver.properties
+++ b/src/main/resources/configserver.properties
@@ -8,6 +8,16 @@ server.port = 8887
 pring.application.name = configserver
 spring.cloud.config.server.git.uri = https://github.com/Manilab2309/ConfigRepoFiles.git
 
+# ===============================
+# = SSL Configuration
+# ===============================
+security.require-ssl=true
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:config.p12
+server.ssl.key-store-password=micro2019
+server.ssl.key-alias=config
+
 # Si deseas albergar tu repositorio de ficheros de configuración de forma nativa en tu sistema
 # spring.profiles.active=native
 # spring.cloud.config.server.native:searchLocations=file://${user.dir}/cloud-configuration-repository
