--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,15 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>/src/main/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>**/banner.txt</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 </project>
