--- a/src/main/resources/configserver.properties
+++ b/src/main/resources/configserver.properties
@@ -6,6 +6,7 @@ info.component = SpringConfig-Server
 # ===============================
 server.port = 8887
 pring.application.name = configserver
+spring.output.ansi.enabled=ALWAYS
 spring.cloud.config.server.git.uri = https://github.com/Manilab2309/ConfigRepoFiles.git
 
 # ===============================
